Fix issues with jumpy sorted columns.

--- a/src/inc/builder/sections/css/sections.css
+++ b/src/inc/builder/sections/css/sections.css
@@ -49,6 +49,10 @@
 		float: left;
 		padding: 0 10px;
 	}
+	.ttfmake-text-columns-2 .ttfmake-text-column-position-3,
+	.ttfmake-text-columns-2 .ttfmake-text-column-position-4 {
+		width: 0;
+	}
 	.ttfmake-text-columns-stage.ttfmake-text-columns-2 .sortable-placeholder,
 	.ttfmake-gallery-items-stage.ttfmake-gallery-columns-2 .sortable-placeholder {
 		width: 50%;
@@ -57,10 +61,10 @@
 		width: 25%;
 	}
 	.ttfmake-text-columns-stage.ttfmake-text-columns-2.current-item-one-third .sortable-placeholder{
-		width: 33%;
+		width: 33.3333%;
 	}
 	.ttfmake-text-columns-stage.ttfmake-text-columns-2.current-item-two-thirds .sortable-placeholder{
-		width: 66%;
+		width: 66.3333%;
 	}
 	.ttfmake-text-columns-stage.ttfmake-text-columns-2.current-item-three-fourths .sortable-placeholder{
 		width: 75%;
